--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,32 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+<!-- 
+	<servlet>
+		<servlet-name>cometd</servlet-name>
+		<servlet-class>org.cometd.server.CometdServlet</servlet-class>
+		<init-param>
+			<param-name>timeout</param-name>
+			<param-value>15000</param-value>
+		</init-param>
+		<init-param>
+			<param-name>multi-timeout</param-name>
+			<param-value>1500</param-value>
+		</init-param>
+		<init-param>
+			<param-name>verbose</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<init-param>
+			<param-name>transports</param-name>
+			<param-value>org.cometd.server.transport.WebSocketTransport</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>cometd</servlet-name>
+		<url-pattern>/cometd/*</url-pattern>
+	</servlet-mapping>
+ -->
 </web-app>
