--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 bin
 .cache
 .classpath
+.history
 .project
 .settings
 .scala_dependencies
@@ -13,3 +14,4 @@ out
 *.iml
 activemq-data
 
+.sbt_completion_cache
