--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,34 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-	<filter>
-		<filter-name>wicketfilter</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+	<servlet>
+		<servlet-name>MeteorServlet</servlet-name>
+		<servlet-class>org.atmosphere.cpr.MeteorServlet</servlet-class>
+
+		<init-param>
+			<param-name>org.atmosphere.filter</param-name>
+			<param-value>org.apache.wicket.protocol.http.WicketFilter</param-value>
+		</init-param>
 		<init-param>
 			<param-name>applicationClassName</param-name>
 			<param-value>com.fsdev.scw.WicketApplication</param-value>
 		</init-param>
-	</filter>
+		<init-param>
+			<param-name>org.atmosphere.useWebSocket</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>org.atmosphere.useNative</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>filterMappingUrlPattern</param-name>
+			<param-value>/*</param-value>
+		</init-param>
+	</servlet>
 
-	<filter-mapping>
-		<filter-name>wicketfilter</filter-name>
+	<servlet-mapping>
+		<servlet-name>MeteorServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</servlet-mapping>
 </web-app>
